# ChangeLog for dev-ruby/facebooker
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*facebooker-1.0.69 (18 May 2010)

  18 May 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  +facebooker-1.0.69.ebuild:
  Initial import of facebooker, for facebook access from Ruby/Rails
  software.
