@@ -1,14 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST facebooker-1.0.69.gem 155648 RMD160 b4823dbb8b4457a2d27b05ec61b57f70fa2532ff SHA1 11116fa19305127efe026021767ca00ee2948d15 SHA256 fa2c3169487d3f5f6b134a369565d9523311314355a4762c0ea7f9e49f05dfc6
-EBUILD facebooker-1.0.69.ebuild 809 RMD160 93b623ed9eb215cd4a3d3aa5b2daa901661a598c SHA1 2aea2779f1d240c8b191d35b9cd2e3384476f2ed SHA256 d7ee2ebb571db08ef368e235029d9970c43482a9e4cb3d9849ed9eb4f77fe6ba
-MISC ChangeLog 320 RMD160 f1ca75b5e9ae92bb471e6af192751e9937b6e2db SHA1 fbc62cae7757f1447dfecd625d5805564da2e02e SHA256 9a94b40f1262fd65d52d58a81f14212ab9b04811dcdbe3ac3e918d152dd8fa27
+DIST facebooker-1.0.70.gem 155648 RMD160 632e88ff82c24e432f5e88102406d00e7392af30 SHA1 fce0fca6b6232e2857314155caaf0507408fbadc SHA256 2068919e848b7f8bbebd85b5382cecdeaa83685c1f1694e3bcb61c76d71188e1
+EBUILD facebooker-1.0.70.ebuild 1069 RMD160 8fb80836d98a31cfa0b83ee8c14a680a05963998 SHA1 a75dbc6fa348d2ad354cc71b214e2dbbaa96f073 SHA256 e1d5c99d695740674a3a7c5360730cffe9fd35aaab112ad2ae37e5f09bac2273
+MISC ChangeLog 582 RMD160 fe5099cd320310fc45097f0ab379e1fc3ccee29f SHA1 afe5728f496a6ea1692c2582843b7818b7f19fa4 SHA256 20b87505d17c870fb149fa937b505d8f7cbac02ab7f00219f83851f2d03a6fb1
 MISC metadata.xml 159 RMD160 eb364108353c7843cf1c01fba92129aaa46a0334 SHA1 0734f4c292968932afc57d0aa3a681c0b75b7bfc SHA256 abab7965b1f41e0acf6b54c554945c1c9fa35b5afab848d784dc58c298bc4679
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAkvy3kAACgkQAiZjviIA2Xh2ygCgqN6v/r8uhEUVbgwe/C8zUmgU
-+DkAn20NSeEw1+lUccUA4cpHwFMNLET1
-=tzm8
+iEYEARECAAYFAkwWYV4ACgkQAiZjviIA2XhCHACdG57xAQGzMF/RLoxGPUoFiNkH
+B54AnAqoT0PuDTN2BsTVbixPYJDblQU1
+=6gwV
 -----END PGP SIGNATURE-----
