@@ -25,10 +25,23 @@ KEYWORDS="~amd64"
 IUSE=""
 
 ruby_add_rdepend "dev-ruby/json"
-ruby_add_bdepend test "virtual/ruby-test-unit dev-ruby/rails dev-ruby/mocha"
+ruby_add_bdepend "
+	test? (
+		virtual/ruby-test-unit
+		dev-ruby/rails
+		dev-ruby/mocha
+		dev-ruby/hoe
+	)
+	doc? ( dev-ruby/hoe )"
 
 DEPEND="${DEPEND}
 	doc? ( media-gfx/graphviz )"
+
+all_ruby_prepare() {
+	# Disable forcing of Rails version, so that it works with both
+	# newer and olders; forcing the tests will do the trick.
+	sed -i -e "s:'rails',.*:'rails':" test/test_helper.rb || die
+}
 
 all_ruby_install() {
 	all_fakegem_install
